# rabbel-solver

./: README.md  app.py  lemmatization_cleaned.csv  pyproject.toml  rabble.py  render.yaml  requirements.txt  solver.py
rabbel_solver/: solver.py  solver2.py
static/: style.css
templates/: base.html  index.html  results.html
tests/: profiler.py
