[tool.poetry]
name = "rabbel-solver"
version = "1.0.0"
description = "Solver for the swedish wordgame rabble.se"
authors = ["Rasmus Persson <rasmus@persson.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pandas = "^2.2.3"
flask = "^3.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
