[tool.poetry]
name = "rabbel-solver"
version = "1.0.0"
description = "Solver for the swedish wordgame rabble.se"
authors = ["Rasmus Persson <rasmus@persson.io>"]
readme = "README.md"
packages = [{include = "rabbel_solver"}]

[tool.poetry.dependencies]
python = "^3.12.1"
pandas = "^2.2.3"
flask = "^3.1.0"
gunicorn = "^23.0.0"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
